# fastomls

./: LICENSE  README.md
common/: packingproblem.cpp  packingproblem.h
instances/dotted_board/BLAZEWICZ1/: puzzle.txt
instances/dotted_board/BLAZEWICZ2/: puzzle.txt
instances/dotted_board/BLAZEWICZ3/: puzzle.txt
instances/dotted_board/BLAZEWICZ4/: puzzle.txt
instances/dotted_board/BLAZEWICZ5/: parameters.txt  puzzle.txt
instances/dotted_board/RCO1/: puzzle.txt
instances/dotted_board/RCO2/: puzzle.txt
instances/dotted_board/RCO3/: puzzle.txt
instances/dotted_board/RCO4/: puzzle.txt
instances/dotted_board/RCO5/: puzzle.txt
instances/dotted_board/SHAPES2/: puzzle.txt
instances/dotted_board/SHAPES4/: parameters.txt  puzzle.txt
instances/dotted_board/SHAPES5/: puzzle.txt
instances/dotted_board/SHAPES7/: puzzle.txt
instances/dotted_board/SHAPES9/: puzzle.txt
instances/spp/Albano/: albano.hml  parameters.txt  puzzle.txt
instances/spp/Dagli/: dagli.hml  parameters.txt  puzzle.txt
instances/spp/Dighe1/: dighe1.hml  parameters.txt  puzzle.txt
instances/spp/Dighe2/: dighe2.hml  parameters.txt  puzzle.txt
instances/spp/Fu/: parameters.txt  puzzle.txt
instances/spp/Jakobs1/: parameters.txt  puzzle.txt
instances/spp/Jakobs2/: parameters.txt  puzzle.txt
instances/spp/Mao/: mao.hml  parameters.txt  puzzle.txt
instances/spp/Marques/: marques.hml  parameters.txt  puzzle.txt
instances/spp/Shapes0/: parameters.txt  puzzle.txt  shapes0.hml
instances/spp/Shapes1/: parameters.txt  puzzle.txt  shapes1.hml
instances/spp/Shapes2/: parameters.txt  puzzle.txt  shapes2.hml
instances/spp/Shirts/: parameters.txt  puzzle.txt  shirts.hml
instances/spp/Swim/: parameters.txt  puzzle.txt  swim.hml
preprocessor/: CMakeLists.txt  colormap.h  kernel.cu  main.cpp  parametersParser.cpp  parametersParser.h  rasterization.cpp
preprocessor/annealing/: cContainer.h  cPolygon.cpp  cPolygon.h  cRectangularContainer.cpp  cRectangularContainer.h  cShape.cpp  cShape.h  cShapeInlines.h  cShapeParameters.h  cShapePlacement.h  cVector.h  problemInstance.cpp  problemInstance.h
preprocessor/cluster/: clusterizator.cpp  clusterizator.h
preprocessor/polybool/: ObjHeap.h  Sort.h  pbarea.h  pbdefs.h  pbgeom.cpp  pbgeom.h  pbgeom.inl  pbimpl.h  pbio.cpp  pbio.h  pbpolys.cpp  pbsweep.cpp  pbtria.h  polybool.cpp  polybool.h  triacons.cpp  triamono.cpp
solver/: CMakeLists.txt  consolepackingloader.cpp  consolepackingloader.h  mainConsole.cpp  packingParametersParser.cpp  packingParametersParser.h
solver/raster/: glsweightset.cpp  glsweightset.h  packing2dthread.cpp  packing2dthread.h  packingclusterthread.cpp  packingclusterthread.h  packingthread.cpp  packingthread.h  rasterinnerfitpolygon.cpp  rasterinnerfitpolygon.h  rasternofitpolygon.cpp  rasternofitpolygon.h  rasteroverlapevaluator.cpp  rasteroverlapevaluator.h  rasteroverlapevaluatordoublegls.cpp  rasteroverlapevaluatorgls.cpp  rasterpackingproblem.cpp  rasterpackingproblem.h  rasterpackingsolution.cpp  rasterpackingsolution.h  rasterstrippackingparameters.h  rasterstrippackingsolver.cpp  rasterstrippackingsolver.h  rasterstrippackingsolver2d.cpp  totaloverlapmap.cpp  totaloverlapmap.h
(+3 files in other folders)
